[package]
name = "scalable_bloom_filter"
version = "0.1.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Scalable Bloom Filter"
homepage = "https://github.com/sile/scalable_bloom_filter"
repository = "https://github.com/sile/scalable_bloom_filter"
readme = "README.md"
keywords = ["bloom-filter"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/scalable_bloom_filter"}
codecov = {repository = "sile/scalable_bloom_filter"}

[dependencies]
siphasher = "0.2"